--- a/On The Map/On The Map/Base.lproj/Main.storyboard
+++ b/On The Map/On The Map/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
         <!--Login View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="LoginViewController" customModule="On_The_Map" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LoginViewController" id="BYZ-38-t0r" customClass="LoginViewController" customModule="On_The_Map" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -94,7 +94,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-8.3969465648854964" y="3.5211267605633805"/>
+            <point key="canvasLocation" x="-50" y="-164"/>
         </scene>
         <!--Map View Controller-->
         <scene sceneID="CXa-Sr-NeX">
@@ -104,14 +104,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" showsUserLocation="YES" showsScale="YES" translatesAutoresizingMaskIntoConstraints="NO" id="HW9-PY-ttM">
-                                <rect key="frame" x="16" y="20" width="361" height="680"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsUserLocation="YES" showsScale="YES" translatesAutoresizingMaskIntoConstraints="NO" id="HW9-PY-ttM">
+                                <rect key="frame" x="16" y="103" width="361" height="666"/>
                                 <standardMapConfiguration key="preferredConfiguration" elevationStyle="realistic"/>
                             </mapView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="wYe-UO-wBM"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="HW9-PY-ttM" firstAttribute="trailing" secondItem="141-8a-Jf6" secondAttribute="trailingMargin" id="Fdb-LZ-GGV"/>
+                            <constraint firstItem="HW9-PY-ttM" firstAttribute="bottom" secondItem="wYe-UO-wBM" secondAttribute="bottom" id="KWU-VP-qBr"/>
+                            <constraint firstItem="HW9-PY-ttM" firstAttribute="top" secondItem="wYe-UO-wBM" secondAttribute="top" id="a0u-N2-Dzt"/>
+                            <constraint firstItem="HW9-PY-ttM" firstAttribute="leading" secondItem="141-8a-Jf6" secondAttribute="leadingMargin" id="q31-a6-1bI"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="" image="icon_mapview-deselected" selectedImage="icon_mapview-selected" id="BxU-sh-udw"/>
                     <connections>
@@ -120,11 +125,28 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ile-Vc-SZk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2165.6488549618321" y="-387.32394366197184"/>
+            <point key="canvasLocation" x="3342.7480916030531" y="-674.64788732394368"/>
+        </scene>
+        <!--Otm Root Navigation Controller-->
+        <scene sceneID="FNY-Xd-HH0">
+            <objects>
+                <navigationController storyboardIdentifier="OtmRootNavigationController" id="0Uq-UZ-Kcm" customClass="OtmRootNavigationController" customModule="On_The_Map" customModuleProvider="target" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="fkb-BJ-SXD">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="3KR-dh-rTz" kind="relationship" relationship="rootViewController" id="oi8-B1-74X"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="knV-h2-ojh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="801" y="-164"/>
         </scene>
         <!--Otm Tab Bar Controller-->
         <scene sceneID="xYb-f9-fBp">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ESY-bq-E3D" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <tabBarController storyboardIdentifier="OtmTabBarController" id="3KR-dh-rTz" customClass="OtmTabBarController" customModule="On_The_Map" customModuleProvider="target" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" id="e9l-9x-lpX"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="75m-eo-cx8">
@@ -134,61 +156,11 @@
                     </tabBar>
                     <connections>
                         <segue destination="vDI-ld-pHv" kind="relationship" relationship="viewControllers" id="uty-cN-TOQ"/>
-                        <segue destination="CKD-6N-PPn" kind="relationship" relationship="viewControllers" id="35k-BN-39D"/>
+                        <segue destination="CKD-6N-PPn" kind="relationship" relationship="viewControllers" id="bbI-Di-RQP"/>
                     </connections>
                 </tabBarController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ESY-bq-E3D" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1098" y="4"/>
-        </scene>
-        <!--Otm Table View Controller-->
-        <scene sceneID="ltd-28-R5G">
-            <objects>
-                <tableViewController id="lbe-eV-kKH" customClass="OtmTableViewController" customModule="On_The_Map" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="JlO-3g-JnD">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="OtmTableViewCell" textLabel="WG8-4A-Hka" detailTextLabel="b3x-v9-2Ck" style="IBUITableViewCellStyleSubtitle" id="Bqs-Ui-3Oo">
-                                <rect key="frame" x="0.0" y="50" width="393" height="43.666667938232422"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Bqs-Ui-3Oo" id="ffE-Kh-1gX">
-                                    <rect key="frame" x="0.0" y="0.0" width="393" height="43.666667938232422"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="WG8-4A-Hka">
-                                            <rect key="frame" x="20" y="6.0000000000000009" width="25" height="14.333333333333334"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Detail" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="b3x-v9-2Ck">
-                                            <rect key="frame" x="19.999999999999996" y="22.333333333333336" width="32.666666666666664" height="14.333333333333334"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                    </subviews>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="lbe-eV-kKH" id="hCb-V2-ARs"/>
-                            <outlet property="delegate" destination="lbe-eV-kKH" id="BVR-xQ-sPQ"/>
-                        </connections>
-                    </tableView>
-                    <tabBarItem key="tabBarItem" title="" selectedImage="icon_listview-selected" id="ei4-Lw-Goz"/>
-                    <navigationItem key="navigationItem" id="nRK-5n-GM7"/>
-                    <connections>
-                        <outlet property="tableView" destination="JlO-3g-JnD" id="DWw-qB-oSJ"/>
-                    </connections>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Kvp-MK-ghr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2593" y="608"/>
+            <point key="canvasLocation" x="1743" y="-164"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="gMJ-Fa-gpt">
@@ -200,17 +172,66 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="lbe-eV-kKH" kind="relationship" relationship="rootViewController" id="P1w-oq-xpY"/>
+                        <segue destination="OBt-Sr-yLe" kind="relationship" relationship="rootViewController" id="Pu0-6X-2tZ"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JgL-sj-zwl" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1094" y="729"/>
+            <point key="canvasLocation" x="1935" y="547"/>
+        </scene>
+        <!--Otm Table View Controller-->
+        <scene sceneID="eG0-dG-Ej7">
+            <objects>
+                <viewController id="OBt-Sr-yLe" customClass="OtmTableViewController" customModule="On_The_Map" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ed6-w4-a7O">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ncO-wT-eqy">
+                                <rect key="frame" x="0.0" y="103" width="393" height="44"/>
+                                <items>
+                                    <navigationItem title="On the Map" id="dl5-wU-PRc"/>
+                                </items>
+                            </navigationBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="RRb-g7-JmC">
+                                <rect key="frame" x="16" y="147" width="361" height="622"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="y2S-0F-jvg">
+                                        <rect key="frame" x="0.0" y="50" width="361" height="43.666667938232422"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="y2S-0F-jvg" id="fal-i7-oDW">
+                                            <rect key="frame" x="0.0" y="0.0" width="361" height="43.666667938232422"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="mdx-6R-yke"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="ncO-wT-eqy" firstAttribute="centerX" secondItem="ed6-w4-a7O" secondAttribute="centerX" id="37b-2O-KV4"/>
+                            <constraint firstItem="RRb-g7-JmC" firstAttribute="leading" secondItem="ed6-w4-a7O" secondAttribute="leadingMargin" id="BUg-br-TNT"/>
+                            <constraint firstItem="RRb-g7-JmC" firstAttribute="centerX" secondItem="ncO-wT-eqy" secondAttribute="centerX" id="XFS-MO-pPe"/>
+                            <constraint firstItem="ncO-wT-eqy" firstAttribute="leading" secondItem="mdx-6R-yke" secondAttribute="leading" id="cGh-ZY-8ya"/>
+                            <constraint firstItem="RRb-g7-JmC" firstAttribute="top" secondItem="ncO-wT-eqy" secondAttribute="bottom" id="d9I-up-Rd4"/>
+                            <constraint firstItem="ncO-wT-eqy" firstAttribute="top" secondItem="mdx-6R-yke" secondAttribute="top" id="dqW-eL-2R8"/>
+                            <constraint firstItem="RRb-g7-JmC" firstAttribute="bottom" secondItem="mdx-6R-yke" secondAttribute="bottom" id="ltk-TW-NHn"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="0xz-9H-uQT"/>
+                    <connections>
+                        <outlet property="tableView" destination="RRb-g7-JmC" id="3ik-Zh-E2w"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eO2-t5-vv4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3392" y="489"/>
         </scene>
     </scenes>
     <resources>
         <image name="icon_listview-deselected" width="75" height="50"/>
-        <image name="icon_listview-selected" width="75" height="50"/>
         <image name="icon_mapview-deselected" width="75" height="50"/>
         <image name="icon_mapview-selected" width="75" height="50"/>
         <image name="logo-u" width="62" height="62"/>
